--- a/.github/workflows/release-ptero-nginx.yml
+++ b/.github/workflows/release-ptero-nginx.yml
@@ -27,3 +27,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
+          tags: ${{ steps.meta.outputs.tags }}
